--- a/vignettes/IFAUC.Rmd
+++ b/vignettes/IFAUC.Rmd
@@ -35,6 +35,7 @@ knitr::opts_chunk$set(echo = TRUE)
 \newcommand{\Zi}{\ensuremath{Z_i}}
 \newcommand{\emp}{\ensuremath{I\negthickspace P_n}}
 \newcommand{\ifauc}{\ensuremath{\mathrm{IF}_{\mathrm{AUC}}}}
+\newcommand{\ifconsauc}{\ensuremath{\mathrm{IF}_{G \mathrm{\  known}, \mathrm{AUC}}}}
 \newcommand{\hatifauc}{\ensuremath{\mathrm{\widehat{IF}}_{\mathrm{AUC}}}}
 \newcommand{\ifnu}{\ensuremath{\mathrm{IF}_{\nu}}}
 \newcommand{\ifnuc}{\ensuremath{\mathrm{IF}^1_{\nu}}}
@@ -91,276 +92,128 @@ knitr::opts_chunk$set(echo = TRUE)
 \newcommand{\Wk}{\W(X_k,\hat G_n)}
 \newcommand{\WWi}{\mathcal{W}_{T_i}(Z_i)}
 \newcommand{\WWj}{\mathcal{W}_t(Z_j)}
+\newcommand{\indep}{\perp \!\!\! \perp}
 
 ## Introduction 
 
-In this document we derive the influence function of the inverse
-probability of censoring weighted (IPCW) estimator of the
-time-dependent AUC in the cases with and without competing risks. We
-denote the uncensored time to event by \(T\), the right censoring time
-by \(C\), and by \(X\) a continuous marker. Let us first look at the case, where $T$ is not censored (and there is only one event).
+In this document, we consider the estimation of the (possibly time-dependent) AUC. Let $R(D_m)(X)$ be a (risk) prediction for $X$ for a model $R$ trained on a data set $D_m$ of size $m$. Then, for binary data $Z=(Y,X)$ and $Z'=(Y',X')$ with $Z \indep Z'$, the AUC score is defined as:
+$$
+\text{AUC}_{R, D_m} = P(R(D_m)(X) > R(D_m)(X') | Y=1, Y' = 0) = \frac{\int \int I(R(D_m)(x) > R(D_m)(x'), y=1,y'=0)P(dz')P(dz)}{P(Y=1)P(Y'=0)}
+$$
+Note that in the above definition that $D_m$ is fixed, so the AUC above will depend on which data set that the model is trained on. To describe the situation with competing risks (and also survival), we introduce a random variable \(D\in\{1,2\}\) which indicates the cause (i.e., type
+of the event) observed at time \(T\) such that \(D=1\) means that the
+event of interest occurred, and \(D=2\) that a competing risk
+occurred. We let \(Q\) denote the joint
+probability measure of the uncensored data, \((T,D,X)\sim Q\), and $P$
+the joint probability measure of the right censored data
+$O=(\tilde{T},\Delta,X) \sim P$ now with $\Delta=D 1_{\{T \leq C\}}$
+taking values in the set \(\{0,1,2\}\). Also let $G$ denote the survival function for the censoring distribution. Now for event type data $Z=(T,D,X)$ and $Z'=(T',D',X')$ with $Z \indep Z'$, we consider the above as a time-dependent discrimination measure for some fixed $\tau$:
+$$
+\begin{aligned}
+\text{AUC}_{R, D_m, \tau} &= Q(R(D_m)(X) > R(D_m)(X') | T\leq \tau, D=1,(T' > \tau \cup D'=2)) \\
+  &= \frac{Q(R(D_m)(X) > R(D_m)(X'), T\leq \tau, D=1,(T' > \tau \cup D'=2))}{Q(T\leq \tau, D=1,(T' > \tau \cup D'=2))}\\
+  &= \frac{\nu_\tau(Q)}{\mu_\tau(Q)}
+\end{aligned}
+$$
+with
+$$
+\begin{aligned}
+\nu_\tau(Q)&= \iint 1_{\{R(D_m)(x) > R(D_m)(x'), t \leqslant \tau,  t^{\prime}>\tau,d=1\}} \frac{P(dz)}{G(t- | x)} \frac{P(dz')}{G\left(\tau | x' \right)} \\
+&+ \iint 1_{\{R(D_m)(x) > R(D_m)(x'), t \leqslant \tau,  t^{\prime}\leq\tau,d=1, d' = 2\}} \frac{P(dz)}{G(t- | x)} \frac{P(dz')}{G\left(t'- | x' \right)}
+\end{aligned}
+$$
+and
+$$
+\mu_\tau(Q)= \iint 1_{\{t \leqslant \tau,  t^{\prime}>\tau,d=1\}} \frac{P(dz)}{G(t- | x)} \frac{P(dz')}{G\left(\tau | x' \right)} + \iint 1_{\{t \leqslant \tau,  t^{\prime}\leq\tau,d=1, d' = 2\}} \frac{P(dz)}{G(t- | x)} \frac{P(dz')}{G\left(t'- | x' \right)}
+$$
 
-##  Influence function uncensored case
+When there are no competing risks, the definition of the above is the same as for binary data with $Y=I(T \leq \tau)$ and $Y'=I(T' > \tau)$. Here we used IPCW to rewrite the above, such that we can actually estimate it from observed data. It is straightforward to write down these plugin-in estimators. 
 
-In the uncensored case, we observe \((T,X)\) and denote \(Q\) for the
-joint probability measure $Q$, i.e., $(T,X) \sim Q$.
-The time-dependent AUC at
-time \(\tau\) for marker \(X\)  is defined as:
-$$
-\AUC(\tau)=Q(X>\Xj | T \leq \tau, T^{\prime}>\tau)=\frac{Q(T \leq \tau,
-  T^{\prime}>\tau, X>\Xj)}{Q(T \leq \tau,
-  T^{\prime}>\tau)}
-$$
-Let \(\mathcal{Q}\) be the set of all probability measures of \(T,X\)
-and consider the functional \(\nu_{\tau}:\mathcal{Q}\to [0,1]\)
-$$
-\nu_{\tau}(Q)=\int \int 1_{\{t \leq \tau, t^{\prime}>\tau, x>\xj\}} d Q(t, x) d Q (t^{\prime}, \xj)
-$$
-Note that the value of the functional is the numerator of the \AUC:
-$$
-\nu_{\tau}(Q)=Q(T \leq \tau, T^{\prime}>\tau, X>\Xj)
-$$
-To derive the Gateaux derivative of the functional at \(Q\) in the
-direction of an observation \(T_i,X_i\) we introduce the corresponding
+In the situation with cross-validation, it will be of interest to estimate $\mathbb{E}_{D_m}[\text{AUC}_{R, D_m}]$ or $\mathbb{E}_{D_m}[\text{AUC}_{R, D_m, \tau}]$, i.e. the expected performance of the model over all training data sets of size $m$. 
+
+In the below sections, we will suggest some estimators of the AUC and their asymptotic variances (by using influence functions). Also, we will calculate the efficient influence function for the AUC.
+
+##  Efficient influence function with known censoring
+We will only cover the competing risk case with uncensored data (or more generally with known censoring distribution), as the efficient influence function for AUC for binary data and survival data follow from this. To derive the Gateaux derivative of the functional at $\text{AUC}_{R, D_m, \tau}$ in the
+direction of an observation $(T_i,D_i,X_i)$ we introduce the corresponding
 path,
 \begin{align*}
-Q_{\varepsilon}^{i}=Q+\varepsilon\left\{\delta_{\left\{T_{i},
+Q_{\varepsilon}^{i}=Q+\varepsilon\left\{\delta_{\left\{T_{i}, D_i,
       X_i\right\}}-Q\right\}.
 \intertext{and the following short notation
 $\partial_{\varepsilon}=\left.\frac{\partial}{\partial
   \varepsilon}\right|_{\varepsilon=0}$ to obtain the directional derivative:}
- \partial_{\varepsilon} Q_{\varepsilon}^{i}=\delta_{\left\{T_{i}, X_i\right\}}-Q.
+ \partial_{\varepsilon} Q_{\varepsilon}^{i}=\delta_{\left\{T_{i}, D_i, X_i\right\}}-Q.
 \end{align*}
-The Gateaux derivative of the functional \(\nu_{\tau}\) is obtained
+The Gateaux derivative of the functional $\text{AUC}_{R, D_m, \tau}$ is obtained
 using straight-forward calculus:
-\begin{align*}
-  \partial_{\varepsilon} \nu_{\tau}(Q_{\varepsilon})&=\int \int 1_{\{t \leq \tau, t^{\prime}>\tau, x>\xj\}} \partial_{\varepsilon} Q_{\varepsilon}^{i} (t,x) d Q (t^{\prime}, \xj)\\
-                                                      &\quad + \int \int 1_{\{t \leq \tau, t^{\prime}>\tau, x>\xj\}} d Q(t, x) \partial_{\varepsilon} Q_{\varepsilon}^{i} (t^{\prime}, \xj) \\
-&= \int \int 1_{\{t \leq \tau, t^{\prime}>\tau, x>\xj\}} d[\delta_{\left\{T_{i}, X_i\right\}}-Q] (t,x) d Q (t^{\prime}, \xj) \\
-                                                      &\quad + \int \int 1_{\{t \leq \tau, t^{\prime}>\tau, x>\xj\}} d Q(t, x) d [\delta_{\left\{T_{i}, X_i\right\}}-Q](t^{\prime}, \xj) \\
-&= \int_{-\infty}^\infty \int_{0}^{\tau} Q(T>\tau, X<x) d\left[\delta_{\left\{T_{i}, X_i\right\}}-Q\right](t,x)\\
-                                                      &\quad +\int_{-\infty}^\infty \int_{\tau}^{\infty}  Q\left(T \leqslant \tau, X>\xj\right) d\left[\delta_{\left\{T_{i}, X_i\right\}}-Q\right](t',x')\\
-&=1_{\left\{T_{i} \leqslant \tau\right\}} Q\left(T>\tau, X<X_{i}\right) +1_{\left\{T_{i}>\tau\right\}} Q\left(T \leqslant \tau, X>X_{i}\right)-2\nu_{\tau}(Q).
-\end{align*}
-
-Now we consider the functional \(\mu_{\tau}:\mathcal{Q}\to [0,1]\)
-corresponding to the denominator of the \AUC:
-$$
-\mu_{\tau}(Q)=\int \int 1_{\{t \leq \tau, t^{\prime}>\tau\}} d Q(t, x) d Q (t^{\prime}, \xj)=Q(T \leq \tau, T' > \tau).
-$$
-An analogous calculation yields that
-$$
-\partial_{\varepsilon} \mu_{\tau}(Q_{\varepsilon}) = 1_{\left\{T_{i} \leqslant \tau\right\}} Q\left(T>\tau\right)+1_{\left\{T_{i}>\tau\right\}} Q\left(T \leqslant \tau\right)-2\mu_{\tau}(Q)
-$$
-The quotient rule now yields that the Gateaux
-derivative for the functional
-\(\AUC_{\tau}(Q)={\nu_{\tau}(Q)}/{\mu_{\tau}(Q)}\) is given by
-\begin{align*}
- &IF_{\AUC}(T_i,X_i;\tau) =  (\mu_{\tau}(Q))^{-2}\\
-                                             &\quad \left[1_{\left\{T_{i} \leqslant \tau\right\}} (Q\left(T>\tau, X<X_{i}\right)\mu_{\tau}(Q)-Q(T > \tau) \nu_{\tau}(Q))\right.\\
-  &\quad \left. +1_{\left\{T_{i}>\tau\right\}} (Q\left(T \leqslant \tau, X>X_{i}\right)\mu_{\tau}(Q) - \nu_{\tau}(Q)Q(T\leq \tau))\right].
-\end{align*}
-
-## Influence function with censoring and multiple events
-
-In this section, we derive the Influence function for the AUC with more than event and censoring (where the censoring is allowed to depend on the covariates). We now suppose that the censoring distribution depends on the baseline
-covariates but continue to assume that the censoring time is
-conditionally independent of the event time and event type given the
-covariates. To describe the situation with competing risks we introduce a new
-random variable \(D\in\{1,2\}\) which indicates the cause (i.e., type
-of the event) observed at time \(T\) such that \(D=1\) means that the
-event of interest occurred, and \(D=2\) that a competing risk
-occurred. As in the survival setting we let \(Q\) denote the joint
-probability measure of the uncensored data, \((T,D,X)\sim Q\), and $P$
-the joint probability measure of the right censored data
-$Z=(\tilde{T},\Delta,X) \sim P$ now with $\Delta=D 1_{\{T \leq C\}}$
-taking values in the set \(\{0,1,2\}\). We are interested in the
-following definition of the time-dependent discrimination measure for
-cause 1:
-\begin{align*}
-\AUC^1(\tau)&=Q(X_i > X_j \mid T_i\leq \tau, D_i = 1, (T_j > \tau \cup D_j = 2 ))\\
-&=\frac{Q(X_i > X_j, T_i\leq \tau, D_i = 1, (T_j > \tau \cup D_j = 2 ))}{Q(T_i\leq \tau, D_i = 1, (T_j > \tau \cup D_j = 2 ))}
-\end{align*}
-We define a functional $\nu^{1}_{\tau}(Q)$ to represent the numerator:
-\begin{align*}
-\nu^{1}_{\tau}(Q) &= \iint 1_{\{x > x', t \leqslant \tau, d = 1, ( t^{\prime}>\tau \cup d' = 2)\}} d Q(t, d, x) d Q\left(t^{\prime}, d', \xj\right) \nonumber\\
-&= \iint 1_{\{x > x', t \leqslant \tau, ( t^{\prime}>\tau \cup d' = 2)\}} d Q(t, 1, x) d Q\left(t^{\prime}, d', \xj\right)
-\psi^{1}_{\tau}(P)  \nonumber\\
-&= \iint 1_{\{x > x', t \leqslant \tau,t^{\prime}>\tau\}} + 1_{\{ x > x', t \leqslant \tau, t' \leqslant \tau, d' = 2)\}} d Q(t, 1, x) d Q\left(t^{\prime}, d', \xj\right) \nonumber\\
-  &= \iint 1_{\{x > x', t \leqslant \tau,t^{\prime}>\tau\}} dQ(t, 1, x) d Q\left(t^{\prime}, d', \xj\right) \nonumber\\
-  &\quad +  \iint 1_{\{ x > x', t \leqslant \tau, t' \leqslant \tau \}} d Q(t, 1, x) d Q\left(t^{\prime}, 2, \xj\right) \nonumber\\
-  &= \sum_{\delta^{\prime}=0,1,2} \iint 1_{\{x > x', t \leqslant \tau,  t^{\prime}>\tau\}} \frac{d P(t, 1, x)}{G(t- | x)} \frac{d P\left(t^{\prime}, \delta^{\prime}, \xj\right)}{G\left(\tau | x' \right)} \label{eq:cr-part1-numerator}\\
-  &\quad + \iint 1_{\{ x > x', t \leqslant \tau, t' \leqslant \tau \}} \frac{d P(t, 1, x)}{G(t-|x)} \frac{d P(t', 2, x')}{G(t'- | x')}
-\end{align*}
-We also need the influence function for the censoring as part of our calculations:
-\begin{align*}
-\kappa_{t,z}(P_{\varepsilon}^i) &= \exp(-\int_0^t \frac{dP_{\varepsilon}(s,0|z)}{P_\varepsilon(\tilde{T} > s|Z=z)}) \\
-\partial_{\varepsilon} P_{\varepsilon}(\tilde{T} >s , Z=z) &= \mathbbm{1}_{\{\tilde{T}_i > s, Z_i = z\}}-P(\tilde{T} > s, Z = z) \\
-\partial_{\varepsilon} P_{\varepsilon}(\tilde{T} \leq s, \Delta=0, Z=z) &= \mathbbm{1}_{\{\tilde{T}_i \leq s,\Delta_i=0, Z_i = z\}}-P(\tilde{T} \leq s, \Delta=0, Z = z)
-\end{align*}
-We have when $Z$ is discrete,
-\begin{align*}
-  &\partial_{\varepsilon} \left[\int_0^t \frac{dP_{\varepsilon}(s,0|z)}{P_\varepsilon(\tilde{T} > s|Z=z)}\right]\\
-  &=\int_0^t \frac{\partial_{\varepsilon} dP_{\varepsilon}(s,0,z)P(\tilde{T}_i > s,Z_i=z)}{P(\tilde{T} > s,Z_i=z)^2}
-     -\frac{dP(s,0,z)\partial_{\varepsilon} P_\varepsilon(\tilde{T} >s, Z_i=z)}{P(\tilde{T} > s,Z_i=z)^2}\\
-  &= \int_0^t \frac{ (d\mathbbm{1}_{\{\tilde{T}_i \leq s,\Delta_i=0, Z_i = z\}}-dP(s,0,z)) P(\tilde{T} > s,Z_i=z)}{P(\tilde{T} > s,Z=z)^2}\\
-  &\quad -\frac{dP(s,0,z) (\mathbbm{1}_{\{\tilde{T}_i > s, Z_i = z\}}-P(\tilde{T} > s, Z = z))}{P(\tilde{T} > s,Z=z)^2}\\
-  &= \int_0^t \frac{ d\mathbbm{1}_{\{\tilde{T}_i \leq s,\Delta_i=0, Z_i = z\}} P(\tilde{T} > s,Z=z)-dP(s,0,z) \mathbbm{1}_{\{\tilde{T}_i > s, Z_i = z\}}}{P(\tilde{T} > s,Z=z)^2}\\
-  &= \frac{\mathbbm{1}_{\{\tilde{T_i} \leq t, \Delta_i = 0, Z_i = z\}}}{P(\tilde{T} > \tilde{T}_i,Z=Z_i)} -\int_0^t \frac{\mathbbm{1}_{\{\tilde{T}_i > s, Z_i = z\}} dP(s,0,z) }{P(\tilde{T} > s,Z=z)^2}\\
-  &= \frac{\mathbbm{1}_{\{\tilde{T_i} \leq t, \Delta_i = 0, Z_i = z\}}}{G(\tilde{T_i}|Z_i)S(\tilde{T_i}|Z_i)P(Z=Z_i)} -\int_0^{\tilde{T}_i \wedge t} \frac{ \mathbbm{1}_{\{ Z_i = z\} }dP(s,0,z)}{G(s|Z_i)^2S(s|Z_i)^2 P(Z=Z_i)^2}\\
-  &:= f_i(t,z)
-\end{align*}
-When $Z$ is continuous or mixed, the above has to be modified. Luckily, if we use the trick from before, we can do the calculation again which will mostly be the same, i.e.
-$$
- f_i(t,z) = \frac{\mathbbm{1}_{\{\tilde{T_i} \leq t, \Delta_i = 0\}} \delta_{Z_i}(z)}{G(\tilde{T_i}|Z_i)S(\tilde{T_i}|Z_i)} -\int_0^{\tilde{T}_i \wedge t} \frac{ \delta_{Z_i}(z)dP(s,0 | z)}{G(s|Z_i)^2S(s|Z_i)^2}
-$$
-This just corresponds to setting $\delta_{Z_i}(z) = \frac{{1}_{\{ Z_i = z\}} }{P(Z=Z_i)}$ in the previous calculation.
-
-We have
-\begin{align*}
-	\partial_{\varepsilon} \left[ \frac{d P_{\varepsilon}\left(t, \delta, x\right)}{\kappa(P_{\varepsilon})\left( s\right)}  \right] &=\frac{d(\delta_{\left\{\tilde{T}_{i}, \Delta_i,X_i\right\}})(t, \delta, x)+dP(t,\delta,x)\left[f_i(s,x)-1\right]}{G(s|x)} 
-\end{align*}
-So calculations for $\nu_\tau^1 (Q)$ can now be done using the above. This yields that the influence function for the numerator can be written as:
-\begin{align}
-	\ifnu(\Zi;\tau) &= \frac{1_{\{\tilde{T}_i \leqslant \tau, \Delta_i = 1\}}}{G(\tilde{T_i}- | X_i)}\int  1_{\{X_i > x', t^{\prime}>\tau\}} \frac{dP(t' , x')}{G(\tau | x')} \\
-	&+\int 1_{\{t \leqslant \tau\}} \int  1_{\{x > x', t^{\prime}>\tau\}} \frac{dP(t', x')}{G(\tau | x')} \frac{\left[f_i(t-,x)-1\right]dP(t,1,x)}{G(t- | x)}  \\
-	&+ \iint 1_{\{x' < x, t \leqslant \tau\}}  \frac{ d P (t, 1, x)}{G(t- | x)} \frac{1_{\{t^{\prime}>\tau\}}\left[f_i(\tau,x')-1\right]dP(t',x')}{G(\tau | x')}  \\
-	&+ \left(\frac{1_{ \{ \tilde{T_i} \leq \tau, \Delta_i = 2\}} }{G(\tilde{T_i} - | X_i)} +  \frac{1_{ \{ \tilde{T_i} > \tau \}} }{G(\tau | X_i )}\right) \int 1_{\{X_i<x, t \leqslant \tau\}}  \frac{ d P (t, 1, x)}{G(t- | x)}\\
-	&+ \iint 1_{\{x' < x, t \leqslant \tau\}} \frac{ d P (t, 1, x)}{G(t- | x)} 1_{\{t^{\prime} \leqslant \tau\}}(f_i(t'-,x')-1) \frac{dP(t',2,x') }{G(t'- | x')} \\
-	&+ \frac{1_{\{\tilde{T}_{i} \leqslant \tau, \Delta_i = 1\}}}{G(\tilde{T}_{i}- | X_i)}\int 1_{\{X_i > x', t^{\prime} \leqslant \tau\}}  \frac{d P\left(t^{\prime},2, \xj\right)}{G(t'- | x')} \\
-	&+ \iint 1_{\{x > x', t^{\prime} \leqslant \tau\}}  \frac{d P(dx') \I{\delta'=2}}{G(t'- |x')}  1_{\{t \leqslant \tau\}}\frac{\left[f_i(t-,x)-1\right]dP(t,1,x)}{G(t-| x)}
-\end{align}
-Next, the denominator is
-\begin{align}
-	\ifmu(\Zi;\tau) &= \frac{1_{\{\tilde{T}_i \leqslant \tau, \Delta_i = 1\}}}{G(\tilde{T_i}- | X_i)}\int  1_{\{t^{\prime}>\tau\}} \frac{dP(t' , x')}{G(\tau | x')} \\
-	&+\int  1_{\{ t^{\prime}>\tau\}} \frac{dP(t', x')}{G(\tau | x')} \int 1_{\{t \leqslant \tau\}}  \frac{\left[f_i(t-,x)-1\right]dP(t,1,x)}{G(t- | x)}  \\
-	&+\int 1_{\{t \leqslant \tau\}}  \frac{ d P (t, 1, x)}{G(t- | x)}  \int \frac{1_{\{t^{\prime}>\tau\}}\left[f_i(\tau,x')-1\right]dP(t',x')}{G(\tau | x')} \\
-	&+ \left( \frac{1_{ \{ \tilde{T_i} \leq \tau, \Delta_i = 2\}} }{G(\tilde{T_i} - | X_i)}+\frac{1_{ \{ \tilde{T_i} > \tau \}} }{G(\tau | X_i )}\right)\int 1_{\{t \leqslant \tau\}}  \frac{ d P (t, 1, x)}{G(t- | x)}\\
-	&+ \int 1_{\{t \leqslant \tau\}} \frac{ d P (t, 1, x)}{G(t- | x)} \int 1_{\{t^{\prime} \leqslant \tau\}} (f_i(t'-,x')-1) \frac{dP(t',2,x') }{G(t'- | x')} \\
-	&+ \frac{1_{\{\tilde{T}_{i} \leqslant \tau, \Delta_i = 1\}}}{G(\tilde{T}_{i}- | X_i)}\int 1_{\{t^{\prime} \leqslant \tau\}}  \frac{d P\left(t^{\prime},2, \xj\right)}{G(t'- | x')} \\
-	&+ \int 1_{\{t \leqslant \tau\}} (f_i(t-,x)-1) \frac{ d P (t, 1, x)}{G(t- | x)} \int 1_{\{t^{\prime} \leqslant \tau\}}  \frac{dP(t',2,x') }{G(t'- | x')}
-\end{align}
-The quotient rule now yields that the Gateaux
-derivative for the functional
-\(\AUC_{\tau}(P)={\nu_{\tau}(Q)}/{\mu_{\tau}(Q)}\) is given by
 \begin{equation*}
-	\ifauc(Z_i,\tau)=\frac{\ifnu(\Zi;\tau)  \mu_{\tau}(Q) - \nu_{\tau}(Q)  \ifmu(\Zi;\tau)} {\mu_{\tau}(Q)^2}
+	\ifconsauc(Z_i,\tau)=\frac{\ifnu(\Zi;\tau)  \mu_{\tau}(Q) - \nu_{\tau}(Q)  \ifmu(\Zi;\tau)} {\mu_{\tau}(Q)^2}
 \end{equation*}
-Note that the terms involving 1 actually cancel each other out in the final calculation, so we can also write that
+where
 \begin{align*}
-	\ifnu(\Zi;\tau) &= \frac{1_{\{\tilde{T}_i \leqslant \tau, \Delta_i = 1\}}}{G(\tilde{T_i}- | Z_i)}\int 1_{\{X_i > x'\}}  \left(1_{\{t^{\prime}>\tau\}} \frac{1}{G(\tau | z')}+  1_{\{t^{\prime} \leqslant \tau\}}  \frac{\I{\delta'=2}}{G(t'- | z')}\right) P(dx') \\
-	&+\iint  1_{\{x > x'\}}\left(1_{\{t^{\prime}>\tau\}} \frac{1}{G(\tau | z')}+  1_{\{t^{\prime} \leqslant \tau\}}  \frac{\I{\delta'=2}}{G(t'- | z')}\right) P(dx')  1_{\{t \leqslant \tau\}} \frac{f_i(t-,z   )P(dx) \I{\delta=1}}{G(t- | z)}  \\
-	&+ \iint   1_{\{x > x'\}}  1_{\{t \leqslant \tau\}}  \frac{P(dx) \I{\delta=1}}{G(t- | z)} \left( \frac{1_{\{t^{\prime}>\tau\}} f_i(\tau,z')}{G(\tau | z')} + 1_{\{t^{\prime} \leqslant \tau\}}f_i(t'-,z') \frac{\I{\delta'=2}}{G(t'- | z')} \right)P(dx')\\
-	&+ \left(\frac{1_{ \{ \tilde{T_i} \leq \tau, \Delta_i = 2\}} }{G(\tilde{T_i} - | Z_i)} +  \frac{1_{ \{ \tilde{T_i} > \tau \}} }{G(\tau | Z_i )}\right) \int  1_{\{x > X_i\}}1_{\{t \leqslant \tau\}}  \frac{P(dx) \I{\delta=1}}{G(t- | x)}
+	\ifnu(\Zi;\tau) &= \frac{1_{\{\tilde{T}_i \leqslant \tau, D_i = 1\}}}{G(\tilde{T_i}- | X_i)}\int 1_{\{R(D_m)(X_i) > R(D_m)(x')\}}  \left(1_{\{t^{\prime}>\tau\}} \frac{1}{G(\tau | x')}+  1_{\{t^{\prime} \leqslant \tau, d' = 2\}}  \frac{1}{G(t'- | x')}\right) P(dz') \\
+	&+ \left(\frac{1_{ \{ \tilde{T_i} \leq \tau, D_i = 2\}} }{G(\tilde{T_i} - | X_i)} +  \frac{1_{ \{ \tilde{T_i} > \tau \}} }{G(\tau | X_i )}\right) \int  1_{\{R(D_m)(x) > R(D_m)(X_i),t \leqslant \tau, d= 1\}}  \frac{P(dz)}{G(t- | x)}
 \end{align*}
-Similarly for the denominator, we need to do this, so
+and
 \begin{align*}
-	\ifmu(\Zi;\tau) &= \frac{1_{\{\tilde{T}_i \leqslant \tau, \Delta_i = 1\}}}{G(\tilde{T_i}- | Z_i)}\int   \left(1_{\{t^{\prime}>\tau\}} \frac{1}{G(\tau | z')}+  1_{\{t^{\prime} \leqslant \tau\}}  \frac{\I{\delta'=2}}{G(t'- | z')}\right) P(dx') \\
-	&+\int \left(1_{\{t^{\prime}>\tau\}} \frac{1}{G(\tau | z')}+  1_{\{t^{\prime} \leqslant \tau\}}  \frac{\I{\delta'=2}}{G(t'- | z')}\right) P(dx') \int 1_{\{t \leqslant \tau\}} \frac{f_i(t-,z   )P(dx) \I{\delta=1}}{G(t- | z)}  \\
-	&+ \int  1_{\{t \leqslant \tau\}}  \frac{P(dx) \I{\delta=1}}{G(t- | z)} \int \left( \frac{1_{\{t^{\prime}>\tau\}} f_i(\tau,z')}{G(\tau | z')} + 1_{\{t^{\prime} \leqslant \tau\}}f_i(t'-,z') \frac{\I{\delta'=2}}{G(t'- | z')} \right)P(dx')\\
-	&+ \left(\frac{1_{ \{ \tilde{T_i} \leq \tau, \Delta_i = 2\}} }{G(\tilde{T_i} - | Z_i)} +  \frac{1_{ \{ \tilde{T_i} > \tau \}} }{G(\tau | Z_i )}\right) \int 1_{\{t \leqslant \tau\}}  \frac{P(dx) \I{\delta=1}}{G(t- | x)}
+	\ifmu(\Zi;\tau) &= \frac{1_{\{\tilde{T}_i \leqslant \tau, D_i = 1\}}}{G(\tilde{T_i}- | X_i)}\int   \left(1_{\{t^{\prime}>\tau\}} \frac{1}{G(\tau | x')}+  1_{\{t^{\prime} \leqslant \tau, d' = 2\}}  \frac{1}{G(t'- | x')}\right) P(dz') \\
+	&+ \left(\frac{1_{ \{ \tilde{T_i} \leq \tau, D_i = 2\}} }{G(\tilde{T_i} - | X_i)} +  \frac{1_{ \{ \tilde{T_i} > \tau \}} }{G(\tau | X_i )}\right) \int 1_{\{t \leqslant \tau, d= 1\}}  \frac{P(dz)}{G(t- | x)}
 \end{align*}
 
-### Some simpler cases 
-- Whenever we have survival data instead of competing risk data, the terms corresponding to $\Delta=2$ can be set to zero, i.e. term 5-7 and 12-14. Also, the first part of 4 and 11 is set to zero.
-- Whenever we have censoring that does not depend on the covariates, terns 2-3 simplify a bit and are instead written as:
-
-\begin{gather*}
-\frac{f_i(\tau)-2}{G(\tau)}\int 1_{\{t \leqslant \tau\}} P(X<x, \tilde{T}>\tau) \frac{1}{G(t-)}dP(t,1,x) \\
-+ \frac{1}{G(\tau)} \int 1_{\{t \leqslant \tau\}} P(X<x, \tilde{T}>\tau) \frac{f_i(t-)}{G(t-)}dP(t,1,x) 
-\end{gather*}
-
-Similar corrections hold for the denominator. In the code, terms (1-7) are now termed (8-14) and (8-14) are now termed (15-21). Note that $P(X < X_i, \tilde{T} > \tau) = \int 1_{\{t > \tau, x < X_i\}} dP(t,x)$.
+## Efficient influence function 
+Similar to the case from before, we can obtain the efficient influence function when the censoring is unknown and has to be estimated. We need the influence function for the censoring as part of these calculations:
+\begin{align*}
+\kappa_{t,x}(P_{\varepsilon}^i) &= \exp(-\int_0^t \frac{dP_{\varepsilon}(s,0|x)}{P_\varepsilon(\tilde{T} > s|X=x)}) \\
+\partial_{\varepsilon} P_{\varepsilon}(\tilde{T} >s , X=x) &= \mathbbm{1}_{\{\tilde{T}_i > s, X_i = x\}}-P(\tilde{T} > s, X = x) \\
+\partial_{\varepsilon} P_{\varepsilon}(\tilde{T} \leq s, \Delta=0, X=x) &= \mathbbm{1}_{\{\tilde{T}_i \leq s,\Delta_i=0, X_i = x\}}-P(\tilde{T} \leq s, \Delta=0, X = x)
+\end{align*}
+Let $f_i(t,x) = \partial_{\varepsilon} \left[\int_0^t \frac{dP_{\varepsilon}(s,0|x)}{P_\varepsilon(\tilde{T} > s|X=x)}\right]$, so that $f_i(t,x)$ is the influence function of the cumulative hazard (conditioned on $x$) of the censoring. We observe that 
+$$
+f_i(t,x) = \frac{\mathbbm{1}_{\{\tilde{T_i} \leq t, \Delta_i = 0\}} \delta_{X_i}(x)}{G(\tilde{T_i}| X_i)S(\tilde{T_i}|X_i)} -\int_0^{\tilde{T}_i \wedge t} \frac{ \delta_{X_i}(x)dP(s,0 | x)}{G(s|X_i)^2S(s|X_i)^2}
+$$
+Here $\delta$ denotes the Dirac measure.  When $X$ is discrete, $\delta_{X_i}(x)$ is to be understood as $\frac{I(X_i=x)}{P(X_i=x)}$. With this in mind, we find that
+\begin{equation*}
+	\ifauc(Z_i,\tau)=\ifconsauc(Z_i,\tau)+	\ifauc(Z_i,\tau)_\text{cens}
+\end{equation*}
+where 
+$$
+\ifauc(Z_i,\tau)_\text{cens} = \frac{\ifnu(\Zi;\tau)_\text{cens}  \mu_{\tau}(Q) - \nu_{\tau}(Q)  \ifmu(\Zi;\tau)_\text{cens}} {\mu_{\tau}(Q)^2}
+$$
+and
+\begin{align*}
+	\ifnu(\Zi;\tau)_{\text{cens}} &=\iint  1_{\{R(D_m)(x) > R(D_m)(x')\}}\left(1_{\{t^{\prime}>\tau\}} \frac{1}{G(\tau | x')}+  1_{\{t^{\prime} \leqslant \tau, d' = 2\}}  \frac{1}{G(t'- | x')}\right) P(dz')  1_{\{t \leqslant \tau, d = 1\}} \frac{f_i(t-,x   )P(dz)}{G(t- | x)}  \\
+	&+ \iint   1_{\{R(D_m)(x) > R(D_m)(x'), t \leqslant \tau, d = 1\}}  \frac{P(dz)}{G(t- | x)} \left( \frac{1_{\{t^{\prime}>\tau\}} f_i(\tau,x')}{G(\tau | x')} + 1_{\{t^{\prime} \leqslant \tau, d'=2\}}f_i(t'-,x') \frac{1}{G(t'- | x')} \right)P(dz')
+\end{align*}
+and
+\begin{align*}
+	\ifmu(\Zi;\tau)_{\text{cens}} &=\int \left(1_{\{t^{\prime}>\tau\}} \frac{1}{G(\tau | x')}+  1_{\{t^{\prime} \leqslant \tau, d' = 2\}}  \frac{1}{G(t'- | x')}\right) P(dz') \int 1_{\{t \leqslant \tau, d = 1\}} \frac{f_i(t-,x   )P(dz)}{G(t- | x)}  \\
+	&+ \int  1_{\{t \leqslant \tau, d = 1\}}  \frac{P(dz)}{G(t- | x)} \int \left( \frac{1_{\{t^{\prime}>\tau\}} f_i(\tau,x')}{G(\tau | x')} + 1_{\{t^{\prime} \leqslant \tau, d' = 2\}}f_i(t'-,x') \frac{1}{G(t'- | x')} \right)P(dz')
+\end{align*}
 
 ### Notes on the case with covariates
-- Term (2), (5) and (7) (and also (9), (12), and (14)) may be evaluated by noting the following
+- Some of the censoring may be evaluated by noting the following
 $$
 \scriptstyle
-\int_X \int_0^\tau H(x)f_i(t-,x) \frac{P(dt,k,x)}{G(t-|x)} = H(X_i)\left(\frac{I(\tilde{T}_i \leq \tau, \Delta_i = 0)}{G(\tilde{T}_i|X_i)S(\tilde{T}_i|X_i)}(F_k(\tau|X_i)-F_k(\tilde{T}_i|X_i))-\int_0^{\tilde{T}_i \wedge \tau} \frac{(F_k(\tau|X_i)-F_k(s|X_i))}{G(s|X_i)^2S(s|X_i)^2}P(ds,0|X_i)\right)
+\int_X \int_0^\tau 1_{\{d =k\}}H(x)f_i(t-,x) \frac{P(dz)}{G(t-|x)} = H(X_i)\left(\frac{I(\tilde{T}_i \leq \tau, \Delta_i = 0)}{G(\tilde{T}_i|X_i)S(\tilde{T}_i|X_i)}(F_k(\tau|X_i)-F_k(\tilde{T}_i|X_i))-\int_0^{\tilde{T}_i \wedge \tau} \frac{(F_k(\tau|X_i)-F_k(s|X_i))}{G(s|X_i)^2S(s|X_i)^2}P(ds,0|X_i)\right)
 $$
 where $H$ is an arbitrary function of $x$ (but not $t$!), $k \in \{1,2\}$ and $F_k$ is the subdistribution function for cause $k$.
 - For Term (3) (and similarly (10)), we can use that  
 $$
 \begin{aligned}
 \scriptstyle
-\int_ X\int H(x')  1_{\{t' > \tau\}} f_i(\tau, x')\frac{P(dt',dx')}{G(\tau | x')}&=\frac{H(X_i)}{G(\tau | X_i)} P(\tilde{T} > \tau | X_i)\left(\frac{I(\tilde{T}_i \leq \tau, \Delta_i = 0)}{G(\tilde{T}_i|X_i)S(\tilde{T}_i|X_i)}-\int_0^{\tilde{T}_i \wedge \tau} \frac{1}{G(s|X_i)^2S(s|X_i)^2}P(ds,0|X_i)\right) \\
+\int_ X\int H(x')  1_{\{t' > \tau\}} f_i(\tau, x')\frac{P(dz')}{G(\tau | x')}&=\frac{H(X_i)}{G(\tau | X_i)} P(\tilde{T} > \tau | X_i)\left(\frac{I(\tilde{T}_i \leq \tau, \Delta_i = 0)}{G(\tilde{T}_i|X_i)S(\tilde{T}_i|X_i)}-\int_0^{\tilde{T}_i \wedge \tau} \frac{1}{G(s|X_i)^2S(s|X_i)^2}P(ds,0|X_i)\right) \\
 &=H(X_i) S(\tau | X_i)\left(\frac{I(\tilde{T}_i \leq \tau, \Delta_i = 0)}{G(\tilde{T}_i|X_i)S(\tilde{T}_i|X_i)}-\int_0^{\tilde{T}_i \wedge \tau} \frac{1}{G(s|X_i)^2S(s|X_i)^2}P(ds,0|X_i)\right) \\
 \end{aligned}
 $$
 where $H$ is again an arbitrary function.
 
 ## Estimation 
-We estimate as follows: 
-\begin{align}
-	\ifnu(\Zi;\tau) &= \frac{1_{\{\tilde{T}_i \leqslant \tau, \Delta_i = 1\}}}{\hat{G}(\tilde{T_i}- | X_i)}\int  1_{\{X_i > x', t^{\prime}>\tau\}} \frac{d\emp(t' , x')}{\hat{G}(\tau | x')} \\
-	&+\int 1_{\{t \leqslant \tau\}} \int  1_{\{x > x', t^{\prime}>\tau\}} \frac{d\emp(t', x')}{\hat{G}(\tau | x')} \frac{\left[\hat{f}_i(t-,x)-1\right]d\emp(t,1,x)}{\hat{G}(t- | x)}  \\
-	&+ \iint 1_{\{x' < x, t \leqslant \tau\}}  \frac{ d \emp (t, 1, x)}{\hat{G}(t- | x)} \frac{1_{\{t^{\prime}>\tau\}}\left[\hat{f}_i(\tau,x')-1\right]d\emp(t',x')}{\hat{G}(\tau | x')}  \\
-	&+ \left(\frac{1_{ \{ \tilde{T_i} \leq \tau, \Delta_i = 2\}} }{\hat{G}(\tilde{T_i} - | X_i)} +  \frac{1_{ \{ \tilde{T_i} > \tau \}} }{\hat{G}(\tau | X_i )}\right) \int 1_{\{X_i<x, t \leqslant \tau\}}  \frac{ d \emp (t, 1, x)}{\hat{G}(t- | x)}\\
-	&+ \iint 1_{\{x' < x, t \leqslant \tau\}} \frac{ d \emp (t, 1, x)}{\hat{G}(t- | x)} 1_{\{t^{\prime} \leqslant \tau\}}(f_i(t'-,x')-1) \frac{d\emp(t',2,x') }{\hat{G}(t'- | x')} \\
-	&+ \frac{1_{\{\tilde{T}_{i} \leqslant \tau, \Delta_i = 1\}}}{\hat{G}(\tilde{T}_{i}- | X_i)}\int 1_{\{X_i > x', t^{\prime} \leqslant \tau\}}  \frac{d \emp\left(t^{\prime},2, \xj\right)}{\hat{G}(t'- | x')} \\
-	&+ \iint 1_{\{x > x', t^{\prime} \leqslant \tau\}}  \frac{d \emp\left(t^{\prime},2, \xj\right)}{\hat{G}(t'- |x')}  1_{\{t \leqslant \tau\}}\frac{\left[\hat{f}_i(t-,x)-1\right]d\emp(t,1,x)}{\hat{G}(t-| x)}
-\end{align}
-Next, the denominator is
-\begin{align}
-	\ifmu(\Zi;\tau) &= \frac{1_{\{\tilde{T}_i \leqslant \tau, \Delta_i = 1\}}}{\hat{G}(\tilde{T_i}- | X_i)}\int  1_{\{t^{\prime}>\tau\}} \frac{d\emp(t' , x')}{\hat{G}(\tau | x')} \\
-	&+\int  1_{\{ t^{\prime}>\tau\}} \frac{d\emp(t', x')}{\hat{G}(\tau | x')} \int 1_{\{t \leqslant \tau\}}  \frac{\left[\hat{f}_i(t-,x)-1\right]d\emp(t,1,x)}{\hat{G}(t- | x)}  \\
-	&+\int 1_{\{t \leqslant \tau\}}  \frac{ d \emp (t, 1, x)}{\hat{G}(t- | x)}  \int \frac{1_{\{t^{\prime}>\tau\}}\left[\hat{f}_i(\tau,x')-1\right]d\emp(t',x')}{\hat{G}(\tau | x')} \\
-	&+ \left( \frac{1_{ \{ \tilde{T_i} \leq \tau, \Delta_i = 2\}} }{\hat{G}(\tilde{T_i} - | X_i)}+\frac{1_{ \{ \tilde{T_i} > \tau \}} }{\hat{G}(\tau | X_i )}\right)\int 1_{\{t \leqslant \tau\}}  \frac{ d \emp (t, 1, x)}{\hat{G}(t- | x)}\\
-	&+ \int 1_{\{t \leqslant \tau\}} \frac{ d \emp (t, 1, x)}{\hat{G}(t- | x)} \int 1_{\{t^{\prime} \leqslant \tau\}} (\hat{f}_i(t'-,x')-1) \frac{d\emp(t',2,x') }{\hat{G}(t'- | x')} \\
-	&+ \frac{1_{\{\tilde{T}_{i} \leqslant \tau, \Delta_i = 1\}}}{\hat{G}(\tilde{T}_{i}- | X_i)}\int 1_{\{t^{\prime} \leqslant \tau\}}  \frac{d \emp\left(t^{\prime},2, \xj\right)}{\hat{G}(t'- | x')} \\
-	&+ \int 1_{\{t \leqslant \tau\}} (\hat{f}_i(t-,x)-1) \frac{ d \emp (t, 1, x)}{\hat{G}(t- | x)} \int 1_{\{t^{\prime} \leqslant \tau\}}  \frac{d\emp(t',2,x') }{\hat{G}(t'- | x')}
-\end{align}
+We can estimate the AUC by using the plugin-estimator $\mathbb{P}_n$ instead of $P$. We also need to estimate the censoring distribution, typically either by a Cox model $\hat{G}_\text{cox}$ or a Kaplan-Meier model $\hat{G}_\text{KM}$, or maybe some other model. The influence function for the first two estimators is fairly easy to estimate (the functional delta theorem will yield that the influence function for these estimators is pretty much the same as the efficient influence function, except $f_i(t,z)$ being given in a slightly different way). In fact, one can fairly easily implement $\hat{f}_i(t,z)$ for these models, so that the influence function of these estimators can be estimated. However, this is generally not so for other types of estimators, and for these estimators, we will drop the censoring term, leading to conservative confidence interval, i.e. assume that $\ifauc(Z_i,\tau)_\text{cens}  = 0$.
 
-We suggest for estimating this, that the inner part of the integrals are estimated first, because (1) some of the inner integrals appear more than once and (2) for efficiency reasons. Note that, when we have that the censoring is independent of the covariates, we might do some other optimizations as well: We assume that
-the survival times are sorted and possibly with ties such that
-$\tilde{T}_{1} < \ldots < \tilde{T}_{i} = \ldots = \tilde{T}_{i+k} < \tilde{T}_{i+k+1} < \ldots <
-\tilde{T}_n$. We use the following algorithm to preserve memory and the number
-of iterations for say $\mu^{(i)} = \int 1_{\{t \leqslant \tau\}} \frac{f_i(t-)}{G(t-)}dP(t,1,x)$. The
-idea is to split the sum into two terms:
-\begin{gather*}
-\frac{1}{n} \sum_{j=1}^n \frac{\hat{f_i}(\tilde{T}_j - )1_{ \{
-    \tilde{T}_j \leq \tau, \Delta_j =1 \}}}{\hat{G}(\tilde{T_j}-)} =\\
-\frac{1}{n} \left(\sum_{j=2}^{i+k} \frac{g(j) 1_{ \{ \tilde{T}_j \leq
-      \tau, \Delta_j =1 \}}}{\hat{G}(\tilde{T_j}-)} +
-  h(i)
-  \sum_{j=i+k+1}^n \frac{1_{ \{ \tilde{T}_j \leq \tau, \Delta_j =1
-      \}}}{\hat{G}(\tilde{T_j}-)} \right)
-\end{gather*}
+In any case, we can actually estimate the terms in the influence function very (computationally) efficiently that do not involve the censoring by sorting the risk predictions. 
 
-since $\hat{f_i}(\tilde{T}_j - )$ only depends on $i$ for $i+k > j$ and only depends on $j$ for $i+k\leq j$, so these values are calculated a priori. Also the first term will always be zero, since we are looking at the value of the integral before any observed event (hence the sum starts at $j=2$). One can check in the estimation of the Influence Curve for the censoring, which does not depend on the covariates that we need to calculate $2n$ values (i.e. $n$ values for $g(i)$ and $n$ for $h(j)$). This is how we can avoid memory issues. The algorithm is:
-\begin{algorithm}[H]
-\DontPrintSemicolon
-\BlankLine
-$t := 1$ \;
-$\hat{\mu}_{2}:= \sum_{j=1}^n \frac{1_{ \{ \tilde{T}_j \leq \tau, \Delta_j =1 \}}}{\hat{G}(\tilde{T_j}-)}$ \;
-\While{$\tilde{T}_1 = \tilde{T}_t $  and  $t \leq n$ } {
-\If{$\tilde{T}_t \leq \tau$ and $\Delta_t = 1$}{
-$\hat{\mu}_{2} = \hat{\mu}_{2} - \frac{1}{G(\tilde{T}_t-)}$ \;
-}
-$t = t + 1$ \;
-}
-$tieEnd := t-1$ \;
-$\hat{\mu}_{1}:=0$ \;
-\For{$i = 1$ to $n$}{
-    $\hat{\mu}^{(i)}=\frac{1}{n} \left(\hat{\mu}_{1}+ h(i)  \hat{\mu}_{2}  \right) $\;
-    \If{$tieEnd \leq i$}{
-        $t = i+1$ \;
-        \While{$\tilde{T}_1 = \tilde{T}_t $  and  $t \leq n$ } {
-                \If{$\tilde{T}_t \leq \tau$ and $\Delta_t = 1$}{
-                        $\hat{\mu}_{2} = \hat{\mu}_{2} - \frac{1}{G(\tilde{T}_t-)}$ \;
-                        $\hat{\mu}_{1} = \hat{\mu}_{1} + \frac{g(t) 1_{ \{ \tilde{T}_{t} \leq \tau, \Delta_{t} =1 \}}}{\hat{G}(\tilde{T}_{t}-)}$\;
-                }
-                Let $t = t + 1$ \;
-        }
-    }
-    Let $tieEnd = t-1$ \;
-}
-return $\hat{\mu}^{(i)}$ for each $i = 1, \ldots, n$ \;
-\end{algorithm}
-
-The idea is that but we keep on adding and subtracting the terms with tied values in the event times. Then we do not need to calculate a sum for each $i$.
-
-On the other hand, efficient calculation of some of the estimates can be done for example by sorting the risks $X$ in (1) for the integral there.
+For some ideas of how to implement the estimation of the censoring terms when we have Kaplan-Meier censoring, see **IFKMCens.pdf**.
 
 ## Cross-validation
 
@@ -431,7 +284,7 @@ Then using that approximately, we have that
 $$
 \int \cdots \int \phi(D_m)_\tau \delta_{x_j}(x_k) \prod_{i \neq j} P(dx_i) \approx  \int \cdots \int \phi(D_m)_\tau P(dx_j)\prod_{i \neq j} P(dx_i) := \Phi_\tau 
 $$
-i.e. we use the expected value as an approximation of the actual value (this is ok assuming that the variance of the LHS is not too large, i.e. the error from assuming this may be determined by using Chebyshevs inequality (and other concentration inequalities), so that the variance of the LHS goes to zero, when  $m, n \rightarrow \infty$ (in the appropriate manner)!, i.e. the difference is $o_p(1)$; otherwise we may try to show that $\frac{1}{\sqrt{n}}\sum_k [\int \cdots \int \phi(D_m)_\tau \delta_{x_j}(x_k) \prod_{i \neq j} P(dx_i) -  \int \cdots \int \phi(D_m)_\tau P(dx_j)\prod_{i \neq j} P(dx_i))] = o_p(1)$, so that the influence function with these terms removed is actually the influence function and not an approximation), so we have the Gateux derivative 
+i.e. we use the expected value as an approximation of the actual value (this is ok assuming that the variance of the LHS is not too large), so we have the Gateux derivative 
 
 $$
 \int \cdots \int \text{IC}_{\phi(D_m)_\tau}^i P(dx_1) \cdots P(dx_m)
@@ -463,17 +316,7 @@ The idea is the same as before. Let $\nu^{1}_{\tau,m}(P)$ be the numerator of th
 \begin{align*}
 \frac{\ifnu(\Zi;\tau,m)\mu_\tau(P) - \nu^{1}_{\tau,m}(P) \ifmu(\Zi;\tau)}{\mu_\tau(P)^2 }
 \end{align*}
-Note that $\mu_{\tau}(P)$ is defined precisely as before (and also $\ifmu$ is the same, because they are constants in terms of $(x_1,...,x_m)$), but we must redefine, $\ifnu$
-\begin{align*}
-	\ifnu(\Zi;\tau,m) &= \frac{1_{\{\tilde{T}_i \leqslant \tau, \Delta_i = 1\}}}{G(\tilde{T_i}- | Z_i)}\int  \Theta_m(X_i,x') 1_{\{t^{\prime}>\tau\}} \frac{P(dx')}{G(\tau | z')} \\
-	&+\int 1_{\{t \leqslant \tau\}} \int  \Theta_m(x,x') 1_{\{t^{\prime}>\tau\}} \frac{P(dx')}{G(\tau | z')} \frac{\left[f_i(t-,z   )-1\right] P(dx) \I{\delta=1}} {G(t- | z)}  \\
-	&+ \iint  \Theta_m(x,x')  1_{\{t \leqslant \tau\}}  \frac{P(dx) \I{\delta=1}}{G(t- | z)} \frac{1_{\{t^{\prime}>\tau\}}\left[f_i(\tau,z')-1\right]P(dx')}{G(\tau | z')}  \\
-	&+ \left(\frac{1_{ \{ \tilde{T_i} \leq \tau, \Delta_i = 2\}} }{G(\tilde{T_i} - | Z_i)} +  \frac{1_{ \{ \tilde{T_i} > \tau \}} }{G(\tau | Z_i )}\right) \int \Theta_m(x,X_i )1_{\{t \leqslant \tau\}}  \frac{P(dx) \I{\delta=1}}{G(t- | x)}\\
-	&+ \iint \Theta_m(x,x') 1_{\{t \leqslant \tau\}} \frac{P(dx) \I{\delta=1}}{G(t- | z)} 1_{\{t^{\prime} \leqslant \tau\}}(f_i(t'-,z')-1) \frac{P(dx') \I{\delta'=2}}{G(t'- | z')} \\
-	&+ \frac{1_{\{\tilde{T}_{i} \leqslant \tau, \Delta_i = 1\}}}{G(\tilde{T}_{i}- | Z_i)}\int \Theta_m(X_i,x') 1_{\{t^{\prime} \leqslant \tau\}}  \frac{P (dx') \I{\delta'=2}}{G(t'- | z')} \\
-	&+ \iint \Theta_m(x,x') 1_{\{t^{\prime} \leqslant \tau\}}  \frac{P(dx')\I{\delta=2}}{G(t'- |z')}  1_{\{t \leqslant \tau\}}\frac{\left[f_i(t-,z)-1\right]P(dx)\I{\delta=1}}{G(t-| z)}
-\end{align*}
-We can remove the ones, and rewrite this to be
+Note that $\mu_{\tau}(P)$ is defined precisely as before (and also $\ifmu$ is the same, because they are constants in terms of $(x_1,...,x_m)$), but we must redefine $\ifnu$, so
 \begin{align}
 	\ifnu(\Zi;\tau,m) &= \frac{1_{\{\tilde{T}_i \leqslant \tau, \Delta_i = 1\}}}{G(\tilde{T_i}- | Z_i)}\int  \Theta_m(X_i,x') \left(1_{\{t^{\prime}>\tau\}} \frac{1}{G(\tau | z')}+  1_{\{t^{\prime} \leqslant \tau\}}  \frac{\I{\delta'=2}}{G(t'- | z')}\right) P(dx') \\
 	&+\iint  \Theta_m(x,x') \left(1_{\{t^{\prime}>\tau\}} \frac{1}{G(\tau | z')}+  1_{\{t^{\prime} \leqslant \tau\}}  \frac{\I{\delta'=2}}{G(t'- | z')}\right) P(dx')  1_{\{t \leqslant \tau\}} \frac{f_i(t-,z   )P(dx) \I{\delta=1}}{G(t- | z)}  \\
